--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
   </div>
   <div class="view-links">
-    <p class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> Coded by <a href="#">Your Name Here</a></p>
+    <p class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> Coded by <a href="https://github.com/TejasMore477/Huddle-landing-page-with-alternating-feature-blocks">Tejas More</a></p>
   </div>
 </body>
 </html>
